--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-SESSION_DRIVER=database
+# SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,10 +35,15 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+# QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 # CACHE_PREFIX=
+
+#render
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=cookie
+CACHE_DRIVER=file
 
 MEMCACHED_HOST=127.0.0.1
 
