--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -17,7 +20,9 @@
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-permission": "^6.18",
-        "spatie/laravel-query-builder": "^6.3"
+        "spatie/laravel-query-builder": "^6.3",
+        "ext-pgsql": "*",
+        "ext-pdo_pgsql": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
@@ -66,6 +71,13 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "post-install-cmd": [
+            "@php artisan clear-compiled",
+            "@php artisan config:clear",
+            "@php artisan view:clear",
+            "chmod -R 777 storage",
+            "chmod -R 777 bootstrap/cache"
         ]
     },
     "extra": {
